# Lab_19

./: CMakeLists.txt  README.md  main.c
file/: file.c  file.h  matrix.c  matrix.h  polynom.c  polynom.h  product.c  product.h  sportsman.c  sportsman.h  sportsmens.c  sportsmens.h  string_.c  string_.h  string_processing.c  string_processing.h  vector.c
file_tests/: file_tests.c  file_tests.h
lab_20/: domen.c  domen.h  knot.c  knot.h  lab_20.c  lab_20.h
lab_20_test/: lab_20_test.c  lab_20_test.h
